core/ingress/istio-gateway/templates/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "<path:kv/data/network#clusterDomain>"
    - "*.<path:kv/data/network#clusterDomain>"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "<path:kv/data/network#clusterDomain>"
    - "*.<path:kv/data/network#clusterDomain>"
    tls:
      credentialName: zro-wildcard-certificate
      mode: SIMPLE
      minProtocolVersion: TLSV1_2
      maxProtocolVersion: TLSV1_3
